--- a/components/CountriesTable/CountriesTable.module.css
+++ b/components/CountriesTable/CountriesTable.module.css
@@ -1,5 +1,6 @@
 .heading {
-    display: flex
+    display: flex;
+    padding: 20px;
 }
 
 .heading button {
@@ -9,9 +10,16 @@
     cursor: pointer;
 }
 
-.heading_name, .heading_population {
+.heading_flag {
     flex: 1;
-    padding: 20px;
+    margin-right: 16px;
+}
+
+.heading_name,
+.heading_population,
+.heading_area,
+.heading_gini {
+    flex: 4;
     color: var(--text-secondary);
     font-weight: 500;
 
@@ -40,7 +48,7 @@
 
     text-align: center;
 
-    background-color: white;
+    background-color: var(--background-color-light);
     border-radius: 8px;
     margin-bottom: 16px;
 
@@ -48,6 +56,8 @@
     font-weight: 500;
 
     transition: transform 200ms ease-in-out, box-shadow 200ms ease-in-out;
+
+    cursor: pointer;
 }
 
 .row:hover {
@@ -56,10 +66,45 @@
 }
 
 .name {
-    flex: 1;
+    flex: 4;
     text-align: left;
 }
 
 .population {
+    flex: 4;
+}
+
+.area {
+    flex: 4;
+}
+
+.gini {
+    flex: 4;
+}
+
+.flag {
     flex: 1;
+    margin-right: 16px;
+}
+
+.flag img {
+    border-radius: 2px;
+    width: 100%;
+}
+
+@media screen and (max-width: 720px) {
+    .area,
+    .heading_area {
+        display: none;
+    }
+
+    .gini,
+    .heading_gini {
+        display: none;
+    }
+
+    .flag,
+    .heading_flag {
+        display: none;
+    }
 }
